@@ -1,5 +1,6 @@
 Makefile
 Makefile.in
 test-objects
+test-parser
 .deps
 .libs
